project/stage/tests/accept/identifiers.ul
void main(){
  int not2b;
  string _name;
  float _____NUMBER;
  char _22;
  void _;

  return;
}