project/stage/tests/reject/bad_array_assign.ul
void main(){
  int[10] things;
  boolean thing;

  thing = true;
  things[5] = thing;
  things[true] = 1;
  return;
}